stash/stash-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stash
  namespace: stash
  labels:
    app: "stash"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "stash"
  template:
    metadata:
      labels:
        app: "stash"
    spec:
      serviceAccountName: stash
      containers:
      - name: operator
        image: appscode/stash:v0.9.0-rc.0
        args:
        - run
        - --v=3
        - --docker-registry=appscode
        - --image-tag=v0.9.0-rc.0
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --service-name=stash
        - --enable-mutating-webhook=true
        - --enable-validating-webhook=true
        - --bypass-validating-webhook-xray=false
        - --use-kubeapiserver-fqdn-for-aks=true
        - --enable-analytics=false
        ports:
        - containerPort: 8443
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "100m"
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      - name: pushgateway
        image: 'prom/pushgateway:v0.5.2'
        args:
        - --web.listen-address=:56789
        - --persistence.file=/var/pv/pushgateway.dat
        ports:
        - containerPort: 56789
        volumeMounts:
        - mountPath: /var/pv
          name: data-volume
        - mountPath: /tmp
          name: stash-scratchdir
      volumes:
      - emptyDir: {}
        name: data-volume
      - emptyDir: {}
        name: stash-scratchdir
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: stash-apiserver-cert
      nodeSelector:
        beta.kubernetes.io/arch: amd64
        beta.kubernetes.io/os: linux

---
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: stash
  labels:
    app: "stash"
spec:
  ports:
  # Port used to expose admission webhook apiserver
  - name: api
    port: 443
    targetPort: 8443
  # Port used to expose Prometheus pushgateway
  - name: pushgateway
    port: 56789
    protocol: TCP
    targetPort: 56789
  selector:
    app: "stash"
    release: "stash"
